# Sysspec

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yml
.github/workflows/: cpp-ci.yml  docker-ci.yml
src/: main.cpp
